add apply & update project

--- a/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -57,6 +57,8 @@
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="~/assets/admin/assets/js/config.js"></script>
+    <!-- CKEditor -->
+    <script type="text/javascript" src="~/assets/ckeditor/ckeditor.js"></script>
 </head>
 
 <body>
@@ -284,11 +286,11 @@
     </div>
     <!-- / Layout wrapper -->
 
-    <div class="buy-now">
+    @*<div class="buy-now">
         <a href="https://themeselection.com/products/sneat-bootstrap-html-admin-template/"
            target="_blank"
            class="btn btn-danger btn-buy-now">Upgrade to Pro</a>
-    </div>
+    </div>*@
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
