--- a/JobPortal.WebApp/Views/Shared/_SearchBoxPartial.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_SearchBoxPartial.cshtml
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="col-lg-2 form-cols">
-            <button type="submit" class="btn btn-info" @*style="margin-left: -2rem;"*@>
+            <button type="submit" class="btn btn-info">
                 <span class="lnr lnr-magnifier"></span> Search
             </button>
         </div>
