--- a/JobPortal.WebApp/Areas/Employer/Views/Job/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Job/Index.cshtml
@@ -1,74 +1,148 @@
 ﻿@model IEnumerable<JobPortal.Data.Entities.Job>
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Http
+@inject SignInManager<AppUser> signInManager
+@inject UserManager<AppUser> userManager
 
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Areas/Employer/Views/Shared/_EmployerLayout.cshtml";
+    var user = await userManager.GetUserAsync(User);
+    ViewData["Title"] = "Job";
 }
 
-<div class="container-xxl flex-grow-1 container-p-y">
-    <div class="card">
-        <h1 style="text-align:center" class="card-header">Table of Jobs</h1>
-        <div class="card-body">
-            <a asp-action="Create" class="btn btn-primary">Create New</a>
-            <p> <br /></p>
-            <div class="table-responsive text-nowrap">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Name)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Description)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.ShortDescription)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.MinAge)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.MaxAge)
-                            </th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Description)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ShortDescription)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.MinAge)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.MaxAge)
-                                </td>
-                                <td>
-                                    <div class="dropdown">
-                                        <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                            <i class="bx bx-list-ul"></i>
-                                        </button>
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item" asp-action="Edit" asp-route-id="@item.Id"><i class="bx bx-edit-alt me-1"></i> Edit</a>
-                                            <a class="dropdown-item" asp-action="Details" asp-route-id="@item.Id"><i class="bx bx-detail me-1"></i> Details</a>
-                                            <a class="dropdown-item" asp-action="Delete" asp-route-id="@item.Id"><i class="bx bx-trash me-1"></i> Delete</a>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
+<div class="content-wrapper">
+    <div class="row">
+        <div class="col-lg-12 grid-margin stretch-card">
+            <div class="card">
+                <div class="card-body">
+                    <p class="card-description">
+                        <a href="/employer/job/@user.Id/create">Add new job</a>
+                    </p>
+                    @*<form asp-action="Index" method="get" class="form-inline">
+                        <div class="form-group mx-sm-3 mb-2">
+                            <input type="text" class="form-control" name="q" style="height: 2.3rem!important;">
+                        </div>
+                        <button type="submit" class="btn btn-primary mb-2">Filter</button>
+                    </form>*@
+                    <form asp-action="DeleteSelected" method="post">
+                        <input type="submit" class="btn btn-danger" value="Delete Selected" onclick="return confirm('Confirm deletion of the selected sections ?') " />
+                        @section Scripts {
+                            <script>
+                                $(function () {
+                                    $('#checkall').change(function () {
+                                        if ($(this).prop("checked") == true) {
+                                            $("input[name=listDelete]").prop("checked", true);
+                                        } else {
+                                            $("input[name=listDelete]").prop("checked", false);
+                                        }
+                                    });
+                                });
+                            </script>
                         }
-                    </tbody>
-                </table>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            <input type="checkbox" id="checkall" />
+                                        </th>
+                                        @*<th>#</th>*@
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Name)
+                                        </th>
+                                        <th>
+                                            Employer
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Province)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Time)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Skill)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Title)
+                                        </th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var job in Model)
+                                    {
+                                        <tr>
+                                            <td>
+                                                <input type="checkbox" name="listDelete" value="@job.Id" />
+                                            </td>
+                                            @*<td>
+                                                @job.Id
+                                            </td>*@
+                                            <td>
+                                                @Html.DisplayFor(modelJob => job.Name)
+                                            </td>
+                                            <td>
+                                                <img src="https://localhost:7211/images/employers/@job.AppUser.UrlAvatar" style="width: 40px" />
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelJob => job.Province.Name)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelJob => job.Time.Name)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelJob => job.Skill.Name)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelJob => job.Title.Name)
+                                            </td>
+                                            <td>
+                                                <a href="/employer/job/@job.Id/update" class="btn btn-primary">Update</a> |
+                                                <a href="/employer/job/@job.Id/delete" class="btn btn-danger">Delete</a>
+                                                @*<button type="button" class="text-danger" onclick="deleteItem(@job.Id)" style="background: transparent; border: none; font-weight: 700; ">Delete</button>*@
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+<style>
+    input.btn.btn-danger {
+        position: absolute;
+        right: 25px;
+        top: 25px;
+    }
+
+    th {
+        font-weight: 700 !important
+    }
+</style>
+
+<script>
+    function deleteItem(id) {
+        Swal.fire({
+            title: 'Delete this job?',
+            text: "Are you sure to delete this job?",
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Xóa!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                window.location.href = '/employer/job/' + id + '/delete';
+                Swal.fire(
+                    'Delete success!',
+                    '',
+                    'success'
+                )
+            }
+        })
+    }
+</script>
