--- a/JobPortal.WebApp/Views/Job/Detail.cshtml
+++ b/JobPortal.WebApp/Views/Job/Detail.cshtml
@@ -48,7 +48,7 @@
 						</div>
 						<p>@Model.Description</p>
 						<h5>Job Nature: @Model.Time.Name</h5>
-						<p class="address"><span class="lnr lnr-map"></span> @Model.ShortDescription</p>
+						<p class="address"><span class="lnr lnr-map"></span> @Model.Introduce</p>
 						<p class="address"><span class="lnr lnr-database"></span> @Model.MinSalary - @Model.MaxSalary</p>
 					</div>
 				</div>
@@ -71,7 +71,7 @@
 					<ul>
 						<li>
 							<img src="../assets/user/img/pages/list.jpg" alt="">
-							<span>@Model.ShortDescription</span>
+							<span>@Model.ObjectTarget</span>
 						</li>
 					</ul>
 				</div>
@@ -80,7 +80,7 @@
 					<ul>
 						<li>
 							<img src="../assets/user/img/pages/list.jpg" alt="">
-							<span>@Model.Description</span>
+							<span>@Model.Experience</span>
 						</li>
 					</ul>
 				</div>
