--- a/JobPortal.WebApp/Areas/Employer/Views/Apply/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Apply/Index.cshtml
@@ -18,13 +18,13 @@
                             <a class="nav-link active" href="/employer/apply/@user.Id/3">All applicants</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/employer/apply/@user.Id/1">Waiting applicants</a>
+                            <a class="nav-link" href="/employer/apply/@user.Id/1">Waiting</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/employer/apply/@user.Id/2">Accepted applicants</a>
+                            <a class="nav-link" href="/employer/apply/@user.Id/2">Accepted</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/employer/apply/@user.Id/0">Denied applicants</a>
+                            <a class="nav-link" href="/employer/apply/@user.Id/0">Denied</a>
                         </li>
                     </ul>
                     <br/>
