--- a/JobPortal.WebApp/Views/Job/Detail.cshtml
+++ b/JobPortal.WebApp/Views/Job/Detail.cshtml
@@ -35,7 +35,7 @@
 						<ul class="tags">
 							<!--Skill-->
 							<li>
-								<a href="#">@Model.Skill.Name</a>
+								<a href="/job?slug=@Model.Skill.Slug">@Model.Skill.Name</a>
 							</li>
 						</ul>
 					</div>
