--- a/JobPortal.WebApp/Views/Job/Index.cshtml
+++ b/JobPortal.WebApp/Views/Job/Index.cshtml
@@ -54,7 +54,7 @@
                             <ul class="tags">
                                 <!--Skill-->
                                 <li>
-                                    <a href="#">@job.Skill.Name</a>
+                                    <a href="/job?slug=@job.Skill.Slug">@job.Skill.Name</a>
                                 </li>
                             </ul>
                         </div>
