--- a/JobPortal.WebApp/Views/Shared/_SidebarPartial.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_SidebarPartial.cshtml
@@ -31,7 +31,7 @@
                     <h6>@job.Province.Name</h6>
                     <p>@job.Description</p>
                     <h5>Job Nature: @job.Time.Name</h5>
-                    <p class="address"><span class="lnr lnr-map"></span> @job.ShortDescription</p>
+                    <p class="address"><span class="lnr lnr-map"></span> @job.Introduce</p>
                     <p class="address"><span class="lnr lnr-database"></span> @job.MinSalary - @job.MaxSalary</p>
                     <a href="/job/@job.Slug" class="btns text-uppercase">View job</a>
                 </div>
