add employer func

--- a/JobPortal.WebApp/Areas/Employer/Views/Apply/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Apply/Index.cshtml
@@ -33,10 +33,10 @@
                             <thead>
                                 <tr>
                                     <th>
-                                        Applicant name
+                                        Applicant
                                     </th>
                                     <th>
-                                        Job name
+                                        Job
                                     </th>
                                     <th>
                                         Apply date
@@ -98,9 +98,9 @@
                                         <th>Major</th>
                                         <th>Graduated</th>
                                         <th>GPA</th>
-                                        @*<th>Description</th>
-                                        <th>Introduce</th>
-                                        <th>CV Image</th>*@
+                                        <th>Phone</th>
+                                        <th>Email</th>
+                                        @*<th>CV Image</th>*@
                                     </tr>
                                     <tr class="targetfields">
                                         <td>
@@ -111,9 +111,9 @@
                                         <td>@CV.Major</td>
                                         <td>@CV.GraduatedAt</td>
                                         <td>@CV.GPA</td>
-                                        @*<td>@CV.Description</td>
-                                        <td>@CV.Introduce</td>
-                                        <td>
+                                        <td>@CV.CVPhone</td>
+                                        <td>@CV.CVEmail</td>
+                                        @*<td>
                                             <img src="https://localhost:7211/images/cvs/@CV.CVImage" alt="cv image" style="width: 100px;">
                                         </td>*@
                                     </tr>
