--- a/JobPortal.WebApp/Views/Apply/Apply.cshtml
+++ b/JobPortal.WebApp/Views/Apply/Apply.cshtml
@@ -40,9 +40,9 @@
                                             <span asp-validation-for="Certificate" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
-                                            <label asp-for="Major" class="control-label"></label><span class="text-danger">*</span>
-                                            <textarea asp-for="Major" class="form-control" rows="3"></textarea>
-                                            <span asp-validation-for="Major" class="text-danger"></span>
+                                            <label asp-for="Introduce" class="control-label"></label><span class="text-danger">*</span>
+                                            <textarea asp-for="Introduce" class="form-control" rows="3"></textarea>
+                                            <span asp-validation-for="Introduce" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="Description" class="control-label"></label><span class="text-danger">*</span>
@@ -52,9 +52,9 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label asp-for="Introduce" class="control-label"></label><span class="text-danger">*</span>
-                                            <input asp-for="Introduce" class="form-control" />
-                                            <span asp-validation-for="Introduce" class="text-danger"></span>
+                                            <label asp-for="Major" class="control-label"></label><span class="text-danger">*</span>
+                                            <input asp-for="Major" class="form-control" />
+                                            <span asp-validation-for="Major" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="GPA" class="control-label"></label><span class="text-danger">*</span>
@@ -65,6 +65,16 @@
                                             <label asp-for="GraduatedAt" class="control-label"></label><span class="text-danger">*</span>
                                             <input asp-for="GraduatedAt" class="form-control" />
                                             <span asp-validation-for="GraduatedAt" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label asp-for="Phone" class="control-label"></label><span class="text-danger">*</span>
+                                            <input asp-for="Phone" class="form-control" />
+                                            <span asp-validation-for="Phone" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label asp-for="Email" class="control-label"></label><span class="text-danger">*</span>
+                                            <input asp-for="Email" class="form-control" />
+                                            <span asp-validation-for="Email" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="UrlImage" class="control-label"></label><span class="text-danger">*</span>
