--- a/JobPortal.WebApp/Views/Apply/ListApplies.cshtml
+++ b/JobPortal.WebApp/Views/Apply/ListApplies.cshtml
@@ -83,11 +83,17 @@
                                             <tr class="targetfields">
                                                 <td class="shoping__cart__item">
                                                     <img src="https://localhost:7211/images/employers/@CV.EmployerLogo" alt="@CV.JobName" style="width: 100px;">
-                                                        <a href="">
-                                                            <h5>
-                                                                @CV.JobName
-                                                            </h5>
-                                                        </a>
+                                                    <a href="">
+                                                        <h5>
+                                                            @CV.JobName
+                                                        </h5>
+                                                        <h5>
+                                                            @CV.CVPhone
+                                                        </h5>
+                                                        <h5>
+                                                            @CV.CVEmail
+                                                        </h5>
+                                                    </a>
                                                     <br />
                                                 </td>
                                                 <td class="shoping__cart__price" style="width: 200px">
