--- a/JobPortal.WebApp/Areas/Admin/Views/Employer/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Employer/Index.cshtml
@@ -1,151 +1,114 @@
-﻿@model IEnumerable<JobPortal.Data.ViewModel.ListCVsViewModel>
-@{
-    ViewData["Title"] = "Tất cả đơn hàng";
-}
+﻿@model IEnumerable<JobPortal.Data.ViewModel.ListEmployersViewWModel>
 
 <div class="content-wrapper">
-
     <div class="row">
         <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title"></h4>
-                    <ul class="nav nav-tabs">
+                    <br />
+                    <ul class="nav nav-tabs" style="justify-content: center">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/admin/order/0">Tất Cả Ứng Viên</a>
+                            <a class="nav-link active" href="/admin/apply-employer/3">All employers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin/order/1">Chờ Xác Nhận Đơn</a>
+                            <a class="nav-link" href="/admin/apply-employer/1">Waiting</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin/order/3">Đơn Đã Chấp Nhận</a>
+                            <a class="nav-link" href="/admin/apply-employer/2">Confirmed</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin/order/4">Đơn Đã Từ Chối</a>
+                            <a class="nav-link" href="/admin/apply-employer/0">Denied</a>
                         </li>
                     </ul>
-                    @* <div class="table-responsive">
-                    <table class="table">
-                    <thead>
-                    <tr>
-                    <th>
-                    Mã đơn hàng
-                    </th>
-                    <th>
-                    Thời gian đặt
-                    </th>
-                    <th>
-                    Trạng thái đơn
-                    </th>
-                    <th></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    @foreach (var item in Model)
-                    {
-                    <tr class="header">
-                    <td>
-                    <b>#DH_@item.OrderId</b>
-                    </td>
-                    <td>
-                    @item.OrderDate
-                    </td>
-                    <td>
-                    @{
-                    switch (item.OrderStatus)
-                    {
-                    case 0:
-                    <span class="text-danger"><b>Đã Hủy</b></span>
-                    break;
-                    case 1:
-                    <span class="text-success"><b>Chờ Xác Nhận</b></span>
-                    break;
-                    case 2:
-                    <span class="text-success"><b>Chờ Lấy Hàng</b></span>
-                    break;
-                    case 3:
-                    <span class="text-success"><b>Đang Giao</b></span>
-                    break;
-                    case 4:
-                    <span class="text-success"><b>Đã Giao</b></span>
-                    break;
-                    default:
-                    <span class="text-success"></span>
-                    break;
-                    }
-                    }
-                    </td>
-                    <td>
-                    @if (item.OrderStatus == 1)
-                    {
-                    <a href="/admin/order/update-order-status/@item.OrderId/2">Duyệt</a>
-                    <a href="/admin/order/update-order-status/@item.OrderId/0" class="text-danger">Hủy đơn</a>
-                    }
-                    @if (item.OrderStatus == 2)
-                    {
-                    <a href="/admin/order/update-order-status/@item.OrderId/3">Đánh dấu Đang Giao</a>
-                    <a href="/admin/order/update-order-status/@item.OrderId/0" class="text-danger">Hủy đơn</a>
-                    }
-                    @if (item.OrderStatus == 3)
-                    {
-                    <a href="/admin/order/update-order-status/@item.OrderId/4">Đánh dấu Đã Giao</a>
-                    <a href="/admin/order/update-order-status/@item.OrderId/0" class="text-danger">Hủy đơn</a>
-                    }
+                    <br />
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        Employer
+                                    </th>
+                                    <th>
+                                        Province
+                                    </th>
+                                    <th>
+                                        Apply date
+                                    </th>
+                                    <th>
+                                        Apply status
+                                    </th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var emp in Model)
+                                {
+                                    <tr class="header">
+                                        <td>
+                                            <b>@emp.FullName</b>
+                                        </td>
+                                        <td>
+                                            @emp.ProvinceName
+                                        </td>
+                                        <td>
+                                            @emp.RegisterDate
+                                        </td>
+                                        <td>
+                                            @{
+                                                switch (emp.Status)
+                                                {
+                                                    case 0:
+                                                        <span class="text-danger"><b>Denied</b></span>
+                                                        break;
+                                                    case 1:
+                                                        <span class="text-success"><b>Waiting</b></span>
+                                                        break;
+                                                    case 2:
+                                                        <span class="text-success"><b>Confirmed</b></span>
+                                                        break;
+                                                    default:
+                                                        <span class="text-success"></span>
+                                                        break;
+                                                }
+                                            }
+                                        </td>
+                                        <td>
+                                            @if (emp.Status == 1)
+                                            {
+                                                <a href="/admin/apply-employer/update-employer-status/@emp.Id/2">Confirmed</a>
+                                                <a href="/admin/apply-employer/update-employer-status/@emp.Id/0" class="text-danger">Denied</a>
+                                            }
+                                            @if (emp.Status == 2)
+                                            {
+                                                <a href="/admin/apply-employer/update-employer-status/@emp.Id/0" class="text-danger">Denied</a>
+                                            }
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th></th>
+                                        <th>Description</th>
+                                        <th>Contact</th>
+                                        <th>Location</th>
+                                        <th>WebsiteURL</th>
+                                        @*<th></th>*@
+                                    </tr>
+                                    <tr class="targetfields">
+                                        <td>
+                                            <img src="https://localhost:7211/images/employers/@emp.UrlAvatar" alt="@emp.FullName" style="width: 100px;">
+                                        </td>
+                                        <td>@emp.Description</td>
+                                        <td>@emp.Contact</td>
+                                        <td>@emp.Location</td>
+                                        <td>@emp.WebsiteURL</td>
+                                        @*<td>
+                                            <img src="https://localhost:7211/images/cvs/@CV.CVImage" alt="cv image" style="width: 100px;">
+                                        </td>*@
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
 
-                    </td>
-                    </tr>
-                    <tr>
-                    <th></th>
-                    <th>Sản phẩm</th>
-                    <th>Đơn giá (số lượng)</th>
-                    <th>Tổng</th>
-                    </tr>
-                    @foreach (var order in item.Detail)
-                    {
-
-                    <tr class="targetfields">
-                    <td>
-                    <img src="https://localhost:7025/products/images/@order.Product.UrlImage" alt="@order.Product.Name" style="width: 50px;">
-                    </td>
-                    <td>@order.Product.Name</td>
-                    <td>@order.Product.Price <i class="pl-3" style="font-weight: 400">(x @order.Quantity)</i></td>
-                    <td class="shoping__cart__total__@item.OrderId">@order.Price</td>
-                    </tr>
-                    }
-                    <tr style="background: #fbfbfb;">
-                    <th></th>
-                    <th></th>
-                    <th>Tổng tiền đơn hàng</th>
-                    <th>
-                    <span class="text-danger">
-                    <b id="total__@item.OrderId">0</b>
-                    </span>
-                    <script src="/admin/template/assets/vendors/js/vendor.bundle.base.js"></script>
-                    <script type="text/javascript">
-                    $(document).ready(function () {
-                    total_calculate(@item.OrderId);
-                    });
-                    function total_calculate(id) {
-                    var total = 0;
-                    //loop through subtotal
-                    $(".targetfields .shoping__cart__total__" + id).each(function () {
-                    //chck if not empty
-                    var value = $(this).text() != "" ? parseFloat($(this).text()) : 0;
-                    total += value; //add that value
-                    })
-                    //assign to total span
-                    $("#total__" + id).text(total.toFixed(0))
-                    }
-                    </script>
-
-                    </th>
-                    </tr>
-
-                    }
-                    </tbody>
-                    </table>
-
-                    </div>*@
+                    </div>
                 </div>
             </div>
         </div>
