--- a/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -133,6 +133,40 @@
                         </a>
                     </li>
 
+                    <!--  Applicants -->
+                    <li class="menu-header small text-uppercase">
+                        <span class="menu-header-text"> Employers </span>
+                    </li>
+                    <!-- Applicant Setting-->
+                    <li class="menu-item">
+                        <a href="javascript:void(0);" class="menu-link menu-toggle">
+                            <i class='menu-icon tf-icons bx bx-user-circle'></i>
+                            <div data-i18n="Employers Settings">Employers Settings</div>
+                        </a>
+                        <ul class="menu-sub">
+                            <li class="menu-item">
+                                <a href="/admin/apply-employer/3" class="menu-link" target="_blank">
+                                    <div data-i18n="Employers">All employers</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="/admin/apply-employer/1" class="menu-link" target="_blank">
+                                    <div data-i18n="Employers">Waiting employers</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="/admin/apply-employer/2" class="menu-link" target="_blank">
+                                    <div data-i18n="Employers">Accepted employers</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="/admin/apply-employer/0" class="menu-link" target="_blank">
+                                    <div data-i18n="Employers">Denied employers</div>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+
                     <!-- Roles & User -->
                     <!-- Users Setting-->
                     <li class="menu-header small text-uppercase">
