--- a/JobPortal.WebApp/Views/Job/Detail.cshtml
+++ b/JobPortal.WebApp/Views/Job/Detail.cshtml
@@ -222,7 +222,7 @@
 
 	function waiting() {
 		Swal.fire({
-			title: 'You already submitted your cv !',
+			title: 'You already submitted your CV !',
 			text: 'Please wait for the results from the employer.',
 			icon: 'info',
 			confirmButtonText: 'OK'
