--- a/JobPortal.WebApp/Areas/Admin/Views/Employer/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Employer/Index.cshtml
@@ -34,8 +34,11 @@
                                     <th>
                                         Apply date
                                     </th>
-                                    <th colspan="2" style="text-align:center">
-                                        Apply status
+                                    <th>
+                                        Status
+                                    </th>
+                                    <th>
+                                        Actions
                                     </th>
                                     <th></th>
                                 </tr>
