--- a/JobPortal.WebApp/Views/Job/Detail.cshtml
+++ b/JobPortal.WebApp/Views/Job/Detail.cshtml
@@ -91,7 +91,7 @@
 					{
 						<a class="text-uppercase loadmore-btn mx-auto d-block" type="button" href="#" onclick="accessDenied()">apply now</a>
 					}
-					else if (@ViewBag.CV != null)
+					else if (ViewBag.HasSubmittedCV)
 					{
 						<a class="text-uppercase loadmore-btn mx-auto d-block" type="button" href="#" onclick="waiting()">apply now</a>
 					}
