--- a/JobPortal.WebApp/Views/Job/Index.cshtml
+++ b/JobPortal.WebApp/Views/Job/Index.cshtml
@@ -66,8 +66,8 @@
                                     <h6>@job.Province.Name</h6>
                                 </div>
                                 <ul class="btns">
-                                    <li><a href="/job/@job.Slug"><span class="lnr lnr-heart"></span></a></li>
-                                    <li><a href="/job/@job.Slug">Apply</a></li>
+                                    @*<li><a href="/job/@job.Slug"><span class="lnr lnr-heart"></span></a></li>*@
+                                    <li><a href="/job/@job.Slug">Apply now</a></li>
                                 </ul>
                             </div>
                             <p>@job.Description</p>
