--- a/JobPortal.WebApp/Areas/Admin/Views/AppUser/ManageUserRoles.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/AppUser/ManageUserRoles.cshtml
@@ -1,38 +1,79 @@
 ﻿@model List<JobPortal.Data.ViewModel.UserRolesViewModel>
 
 @{
-    ViewData["Title"] = "Phân quyền user";
+    ViewData["Title"] = "Set role for user";
     var userId = ViewBag.userId;
 }
 
-<div class="content-wrapper">
-    <div class="row">
-        <div class="col-lg-12 grid-margin stretch-card">
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Phân quyền user</h4>
-                    <form method="post">
-                        @for (int i = 0; i < Model.Count; i++)
-                        {
-                            <div class="form-check m-1">
-                                <input type="hidden" asp-for="@Model[i].RoleId" />
-                                <input type="hidden" asp-for="@Model[i].RoleName" />
-                                <input asp-for="@Model[i].IsSelected" class="form-check-input" />
-                                <label class="form-check-label" asp-for="@Model[i].IsSelected">
-                                    @Model[i].RoleName
-                                </label>
-                            </div>
-                        }
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <input type="submit" value="Update" class="btn btn-primary"
-                               style="width:auto" />
-                        @*<a asp-action="EditUser" asp-route-id="@userId"
-                        class="btn btn-secondary" style="width:auto">Cancel</a>*@
-                        <a asp-action="index"
-                           class="btn btn-secondary" style="width:auto">Cancel</a>
-                    </form>
+                    <h4 class="card-title text-center">SET ROLE FOR USER</h4>
+                    <div class="row">
+                        <div class="col-md-8 mx-auto">
+                            <form method="post" enctype="multipart/form-data" id="form">
+                                @for (int i = 0; i < Model.Count; i++)
+                                {
+                                    <div class="form-group m-1">
+                                        <input type="hidden" asp-for="@Model[i].RoleId" />
+                                        <input type="hidden" asp-for="@Model[i].RoleName" />
+                                        <input type="checkbox" asp-for="@Model[i].IsSelected" class="form-check-input" onclick="toggleRoles(this)" />
+                                        <label class="form-check-label" asp-for="@Model[i].IsSelected">
+                                            @Model[i].RoleName
+                                        </label>
+                                        <hr />
+                                    </div>
+                                }
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                <div class="form-group text-center" style="margin-bottom: 15px">
+                                    <input style="background-color:forestgreen" type="button" onclick="onConfirm()" value="Confirm" class="btn btn-primary" />
+                                    <a asp-action="index"
+                                       class="btn btn-secondary" style="width:auto">Cancel</a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
+    <script>
+        function toggleRoles(checkbox) {
+            var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+            checkboxes.forEach(function (element) {
+                if (element !== checkbox) {
+                    element.checked = false;
+                }
+            });
+        }
+
+        function onConfirm() {
+            Swal.fire({
+                title: 'Set role for user?',
+                text: "Are you sure to set role for this user?",
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Confirm'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $("#form").submit();
+                    Swal.fire(
+                        'Success!',
+                        '',
+                        'success'
+                    )
+                }
+            })
+        }
+    </script>
+}
