--- a/JobPortal.WebApp/Areas/Admin/Views/Role/CreateRole.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Role/CreateRole.cshtml
@@ -1,39 +1,40 @@
 ﻿@model JobPortal.Data.ViewModel.CreateRoleViewModel
 
 @{
-    ViewData["Title"] = "Thêm mới role";
+    ViewData["Title"] = "Add new role";
 }
 
-<div class="content-wrapper">
-
-    <div class="row">
-
-        <div class="col-lg-12 grid-margin stretch-card">
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Create Role</h4>
-                    <div class="col-md-4">
-                        <form asp-action="CreateRole" method="post" id="form">
-                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <div class="form-group">
-                                <label asp-for="RoleName" class="control-label"></label>
-                                <input asp-for="RoleName" class="form-control" />
-                                <span asp-validation-for="RoleName" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label asp-for="Description" class="control-label"></label>
-                                <input asp-for="Description" class="form-control" />
-                                <span asp-validation-for="Description" class="text-danger"></span>
-                            </div>
-                            <br />
-                            <div class="form-group">
-                                <input style="background-color: forestgreen" type="submit" value="Create" class="btn btn-primary" onclick="onConfirm()" />
-                            </div>
-                        </form>
-                    </div>
-                    <br />
-                    <div>
-                        <a style="background-color: gray" class="btn btn-primary" asp-action="Index">Back to List</a>
+                    <h4 class="card-title text-center">FORM CREATE ROLE</h4>
+                    <div class="row">
+                        <div class="col-md-8 mx-auto">
+                            <form asp-action="CreateRole" method="post" id="form">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                <div class="form-group">
+                                    <label asp-for="RoleName" class="control-label"></label><span class="text-danger">*</span>
+                                    <input asp-for="RoleName" class="form-control" />
+                                    <span asp-validation-for="RoleName" class="text-danger"></span>
+                                </div>
+                                <br />
+                                <div class="form-group">
+                                    <label asp-for="RoleDescription" class="control-label"></label><span class="text-danger">*</span>
+                                    <input asp-for="RoleDescription" class="form-control" />
+                                    <span asp-validation-for="RoleDescription" class="text-danger"></span>
+                                </div>
+                                <br />
+                                <div class="form-group text-center" style="margin-bottom: 15px">
+                                    <input style="background-color:forestgreen" type="button" onclick="onCreate()" value="Create" class="btn btn-primary" />
+                                </div>
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                <div class="text-center">
+                                    <a style="background-color:gray" class="btn btn-primary" href="/admin/auth/list-roles">Back to List</a>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -46,19 +47,19 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
     <script>
-        function onConfirm() {
+        function onCreate() {
             Swal.fire({
-                title: 'Thêm mới quyền?',
-                text: "Bạn có chắc sẽ thêm quyền này?",
+                title: 'Add new role?',
+                text: "Are you sure to add new role?",
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Xác nhận!'
+                confirmButtonText: 'Confirm'
             }).then((result) => {
                 if (result.isConfirmed) {
                     $("#form").submit();
                     Swal.fire(
-                        'Thêm thành công!',
+                        'Success!',
                         '',
                         'success'
                     )
