--- a/JobPortal.WebApp/Areas/Admin/Views/Role/ListRoles.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Role/ListRoles.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<JobPortal.Data.Entities.AppRole>
 
 @{
-    ViewData["Title"] = "Tất cả roles";
+    ViewData["Title"] = "All roles";
 }
 
 <div class="content-wrapper">
@@ -9,7 +9,6 @@
         <div class="col-lg-12 grid-margin stretch-card">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Roles Management</h4>
                     <p class="card-description">
                         <a class="btn btn-primary" asp-action="CreateRole">Create new role</a>
                     </p>
@@ -42,14 +41,12 @@
                                         </td>
                                         <td>
                                             <a class="btn btn-primary" asp-action="EditRole" asp-route-Id="@item.Id">Edit</a>
-                                            <a style="background-color: darkred" class="btn btn-primary" asp-action="DeleteRole" asp-route-Id="@item.Id">Delete</a>
-                                            @*<input type="submit" class="text-danger" onclick="deleteItem('@item.Id')" style="background: transparent; border: none; font-weight: 700; " value="Delete" />*@
+                                            <button class="btn btn-danger" type="button" onclick="onDelete('@item.Id')">Delete</button>
                                         </td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
-
                     </div>
                 </div>
             </div>
@@ -70,23 +67,23 @@
 </style>
 
 <script>
-    function deleteItem(id) {
+    function onDelete(id) {
         Swal.fire({
-            title: 'Xác nhận xóa?',
-            text: "Bạn có chắc sẽ xóa role này?",
+            title: 'Delete this role?',
+            text: "Are you sure to delete this role?",
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
             cancelButtonColor: '#d33',
-            confirmButtonText: 'Xóa!'
+            confirmButtonText: 'Delete'
         }).then((result) => {
             if (result.isConfirmed) {
                 window.location.href = '/admin/auth/delete-role/' + id;
                 Swal.fire(
-                    'Xóa thành công!',
+                    'Deleted!',
                     '',
                     'success'
-                )
+                );
             }
-        })
+        });
     }
 </script>
