--- a/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -166,30 +166,10 @@
                         </ul>
                     </li>
 
-                    <!-- Roles & User -->
-                    <!-- Users Setting-->
+                    <!-- Roles -->
                     <li class="menu-header small text-uppercase">
                         <span class="menu-header-text"> User & Roles </span>
                     </li>
-                    <li class="menu-item">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
-                            <i class='menu-icon tf-icons bx bx-user-circle'></i>
-                            <div data-i18n="Account Settings">User Settings</div>
-                        </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item">
-                                <a href="PageError.html" class="menu-link" target="_blank">
-                                    <div data-i18n="Account">User Management</div>
-                                </a>
-                            </li>
-                            <li class="menu-item">
-                                <a onclick="window.location.href='~/Views/Shared/PageError.cshtml'" class="menu-link" target="_blank">
-                                    <div data-i18n="Notifications">Employer Management</div>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
 
                     <!-- Roles Setting -->
                     <li class="menu-item">
